--- a/#source/scss/rooms_sep.scss
+++ b/#source/scss/rooms_sep.scss
@@ -174,7 +174,7 @@
 
 .small__slider .slick-slide.slick-active{
     
-    opacity: 0.5;
+    opacity: 0.7;
 }
 
 
@@ -186,6 +186,7 @@
 .small__slider__item{
     margin: 2px;
     height: 90px;
+    cursor: pointer;
 }
 .small__slider__item img{
     width: 100%;
