--- a/css/style.css
+++ b/css/style.css
@@ -441,6 +441,9 @@ ul.slick-dots {
   top: 0;
   left: 0;
   z-index: 1000;
+  -webkit-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  transition: all 0.3s linear;
 }
 
 .header__logo {
@@ -1180,7 +1183,7 @@ h3.rooms__price {
 }
 
 .small__slider .slick-slide.slick-active {
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
 .small__slider .slick-slide.slick-current {
@@ -1192,6 +1195,7 @@ h3.rooms__price {
 .small__slider__item {
   margin: 2px;
   height: 90px;
+  cursor: pointer;
 }
 
 .small__slider__item img {
