--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -13,6 +13,7 @@
 @import "reviews.scss";
 @import "contacts.scss";
 @import "rooms_sep.scss";
+@import "routes_sep.scss";
 @import "pop-up.scss";
 @import "services-sep.scss";
 @import "media.scss";
