--- a/css/style.css
+++ b/css/style.css
@@ -1230,6 +1230,122 @@ h3.rooms__price {
   background-color: rgba(70, 65, 61, 0.7);
 }
 
+.intro__routes {
+  width: 100%;
+  height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  background: url("../img/room_selection/bg_room.jpg") no-repeat center center;
+  background-size: cover;
+}
+
+.intro__routes__inner {
+  padding-top: 50px;
+}
+
+.intro__routes__inner h1 {
+  color: #fcfcfc;
+  font-size: 48px;
+  font-weight: 700;
+}
+
+.intro__routes__inner h3 {
+  color: #DEB06F;
+  font-size: 30px;
+  font-weight: 400;
+  padding: 0 200px;
+  margin-top: 10px;
+}
+
+.routes__body {
+  margin: 50px 0 0 0;
+  overflow: hidden;
+}
+.routes__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 70px;
+  height: 350px;
+  overflow: hidden;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+}
+.routes__item:last-child {
+  margin-bottom: 0;
+}
+.routes__more {
+  opacity: 0;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 3;
+  color: #DEB06F;
+  font-size: 30px;
+  font-weight: 300;
+  outline: #DEB06F 2px solid;
+  outline-offset: -10px;
+}
+.routes__item.block__inv {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+.routes__item.block__inv .routes__caption {
+  padding: 0 15px 0 40px;
+}
+.routes__caption {
+  width: 40%;
+  padding: 0 40px 0 15px;
+}
+.routes__title {
+  text-transform: uppercase;
+}
+.routes__title.section_title {
+  margin-top: 0;
+}
+.routes__excerpt {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 1.4;
+  color: #46413d;
+}
+.routes__picture {
+  overflow: hidden;
+  width: 60%;
+}
+.routes__picture img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
 .popup {
   position: fixed;
   width: 100%;
