routes item's  added hover effect to button

--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -51,7 +51,7 @@ body {
     text-decoration: none;
     text-transform: uppercase;
     background-color: #deb06f;
-    transition: background .1s linear;
+    transition: all .2s linear;
     cursor: pointer;
  
 }
@@ -95,8 +95,8 @@ opacity: 1;
     width: 120px;
     height: 2px;
     background-color: #deb06f;
-
 }
+
 
 //====================================== intro ======================================
 .intro{
