--- a/#source/scss/header+nav.scss
+++ b/#source/scss/header+nav.scss
@@ -7,9 +7,8 @@
     top: 0;
     left: 0;
     z-index: 1000;
-    transition: all 0.3s linear;
+    transition: all .2s linear;
 
-    
 }
 .header__logo{
     z-index: 100;
@@ -26,9 +25,10 @@
     position: fixed;
     height: auto;
     padding: 5px 10px ;
-    background-color: #deb06f;
-    
-    box-shadow: 0px 1px 5px #46413d ; 
+    box-shadow: 0px 1px 5px #46413d ;
+    background-color: rgba(222,176,111,.8);
+    backdrop-filter: blur(20px);
+
 }
 .header.fixed .container{
     max-width: 100%;
@@ -83,11 +83,9 @@
 }
 .nav__link{
     margin-left: 30px;
-    color: #fcfcfc;
+    color: #fcfcfc;    
     text-decoration: none;
     transition: color 0.2s linear;
-    
-   
 }
 .nav__link:first-child{
     margin-left: 0;
@@ -106,8 +104,12 @@
     font-size: 14px;
     
     
+    
+}
+.header.fixed .nav .nav__link{
+    color: #46413d;
 }
 .header.fixed .nav .nav__link:hover{
-    color: #46413d;
+    color: #fcfcfc;
     transition: color 0.2s linear
 }
