--- a/#source/scss/services.scss
+++ b/#source/scss/services.scss
@@ -65,7 +65,10 @@
     color: #deb06f;
     font-size: 30px;
     font-weight: 300;
+    background-color:rgba(70,65,61,.1);
+    backdrop-filter: blur(5px);
     transition:all .2s linear;
+
     
 
 }
