--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -23,6 +23,64 @@ body {
 
 
 
+
+
+        .thank {
+            height: 100%;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: url(../img/home_bg.jpg) no-repeat bottom;
+            background-size: cover;
+        }
+
+        .thank__inner {
+            height: 100%;
+            width: 100%;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+            background-color: rgba(255, 255, 255, .1);
+            backdrop-filter: blur(10px);
+        }
+
+        .thank__text {
+            margin-bottom: 10px;
+        }
+
+        .thank h1 {
+            font-size: 60px;
+            margin-bottom: 20px;
+            font-weight: 700;
+            color: #deb06f;
+        }
+
+        .thank h2 {
+            font-size: 30px;
+
+            color: #fcfcfc;
+        }
+
+        @media (max-width: 610px) {
+            .intro__subtitle span {
+                line-height: 1.7;
+            }
+        }
+
+        @media (max-width: 350px) {
+            h1 {
+                font-size: 50px;
+            }
+
+            h2 {
+                font-size: 24px;
+            }
+        }
+
 //====================================== Preloader ======================================
 .preloader {
     position: fixed;
